# vk-layer-flimes-gui

./: CMakeLists.txt  README.md
data/: vk-layer-flimes-gui.desktop
src/: ExternalControl.cpp  ExternalControl.hpp  HotkeyDialog.cpp  HotkeyDialog.hpp  KeySequence.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  PowerSupply.cpp  PowerSupply.hpp  X11ActiveWindow.cpp  X11ActiveWindow.hpp  X11GlobalHotkey.cpp  X11GlobalHotkey.hpp  X11Helpers.hpp
